--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 _cache/_app/content/last.php
+
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
