--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -173,6 +173,7 @@ _admin_nav:
   help:      true
   view_site: true
   logout:    true
+  raven:     true 
 
 # When you log in, where would you like to start?
 _admin_start_page: pages
