--- a/_config/fieldsets/journal.yaml
+++ b/_config/fieldsets/journal.yaml
@@ -1,10 +1,19 @@
 fields:
-  categories:
-    display: Categories
+  tags:
+    display: Tags
     required: false
     default:
     type: tags
+
+
   content:
+    display: Content
     type: redactor
+    image_dir: assets/img/gallery
+    resize:
+      width: 800
+      height: 300
+      quality: 60
+      upsize: false
 
 hide: false
